src/objects/Quote_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_SequenceNumber__c</fullName>
        <label>Bundle Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>Product_Bundle__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice IT Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Product__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_Net_Total__c</fullName>
        <label>Roll Up Annual Net Total</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_Up_Annual_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_Row_Total__c</fullName>
        <label>Roll Up Annual Row Total</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_Up_Annual_Row_Total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Annual_VAT__c</fullName>
        <label>Roll Up Annual VAT</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_Up_Annual_VAT__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_2_Net_total__c</fullName>
        <label>Roll up Year 2 Net total</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_up_Year_2_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_3_Net_total__c</fullName>
        <label>Roll up Year 3 Net total</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_up_Year_3_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Year_4_Net_total__c</fullName>
        <label>Roll up Year 4 Net total</label>
        <summarizedField>Quote_Rate_Plan__c.Roll_up_Year_4_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Quote Product Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Rate_Plans__c</fullName>
        <label>Total Quote Rate Plans</label>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>Vat Roll Up</label>
        <summarizedField>Quote_Rate_Plan__c.Vat_Roll_Up__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quote Product</label>
    <nameField>
        <label>Quote Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>